Added additional collection methods, boolean negations, and recommendation functions